--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~10.1.3",
     "firebase": "^7.0.0 || ^8.0.0",
     "rxjs": "~6.6.0",
+    "service": "^0.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
