--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "chart.js": "^2.9.4",
     "firebase": "^7.0.0 || ^8.0.0",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "service": "^0.1.4",
     "tslib": "^2.0.0",
